# WLLRRosteringApp

./: .gitignore  .pre-commit-config.yaml  README.md  Roster_app.py  Roster_app.spec  blank_availability_forms.py  data_imports_and_templates.py  rostering_app.spec  setup.cfg  tkinter_rostering_program.py
.github/workflows/: ci-pipeline.yml  python-app.yml
Test input data/: Crew requirements.xlsx  Test_Working_Roster.xlsx  Timetable.xlsx
Test input data/01 Driver availability/: Geoff Gauntlett.xlsx  James Newby.xlsx  John Travis.xlsx
Test input data/02 Fireman availability/: Joe Gunby.xlsx  Kate Billmore.xlsx  Megan Charman.xlsx  Rowan Joachim.xlsx
Test input data/03 Trainee availability/: Harry Billmore.xlsx  Sam Billmore.xlsx  Stewart Charman.xlsx
Test output data/: Test_Avail_Form.xlsx  Test_Blank_Roster.xlsx  Test_Master_availability.xlsx  Test_Master_roster.xlsx
blank_availability/: create_blank_availability.py
blank_roster/: create_blank_roster.py
import_export/: import_export_classes.py
individual_rosters/: create_individual_rosters.py
master_roster/: create_master_availability.py  create_master_roster.py
src/: rostering_app.py
src/blank_availability/: create_blank_availability.py
src/blank_roster/: create_blank_roster.py
src/error_handling/: error_handling_decorator.py
user_interface/: allocate_crews_screen.py  app_container.py  blank_availability_screen.py  blank_roster_screen.py  error_screen.py  home_screen.py  individual_rosters_screen.py  master_availability_screen.py  tkinter_user_interface.py  wait_screen.py
(+47 files in other folders)
