[metadata]
name = WLLRRosteringApp
version = 0.0.1

[options]
python_requires = >=3.7
package_dir =
    = src
install_requires =
    numpy
    pandas
    pywin32
    matplotlib
    openpyxl
    xlsxwriter

[options.extras_require]
testing =
    pytest
build =
    pyinstaller

[options.entry_points]
console_scripts =
    WLLRRosteringApp = rostering_app:main
