[metadata]
name = WLLRRosteringApp
version = 0.0.1

[options]
python_requires = >=3.7
package_dir =
    = src
install_requires =
    numpy
    pandas
    xlwings
    matplotlib
    openpyxl
    xlsxwriter

[options.extras_require]
dev = 
    pre-commit
test =
    pytest
build =
    pyinstaller

[options.entry_points]
console_scripts =
    WLLRRosteringApp = rostering_app:main

[flake8]
max-line-length = 88
extend-ignore = E203

[tool:pytest]
pythonpath = . src
